k8s/hook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook
webhooks:
  - name: webhook-service.default.svc
    failurePolicy: Fail
    clientConfig:
      service:
        name: webhook-service
        namespace: default
        path: "/mutate"
      #this is base64 encode of rootCA.crt `cat rootCA.crt | base64 | tr -d '\n'`
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUdEakNDQS9hZ0F3SUJBZ0lKQU9zTGpOaFJ6VU9wTUEwR0NTcUdTSWIzRFFFQkN3VUFNSUdiTVFzd0NRWUQKVlFRR0V3SlZVekVUTUJFR0ExVUVDQXdLVG1WM0lFcGxjbk5sZVRFVE1CRUdBMVVFQnd3S1VISnBibU5sZEc5dQpJREVTTUJBR0ExVUVDZ3dKUkc5M0lFcHZibVZ6TVF3d0NnWURWUVFMREFOUVNVSXhGakFVQmdOVkJBTU1EU291ClpHVm1ZWFZzZEM1emRtTXhLREFtQmdrcWhraUc5dzBCQ1FFV0dYTmpiM1IwTG5KaGFHNWxja0JrYjNkcWIyNWwKY3k1amIyMHdIaGNOTVRneE1qRTFNak0wTlRNeldoY05NakV4TURBME1qTTBOVE16V2pDQm16RUxNQWtHQTFVRQpCaE1DVlZNeEV [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
